# drf_hws

./: .env.sample  Dockerfile  all_db_data.json  docker-compose.yaml  groups_fixture.json  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_owner_alter_lesson_owner.py  0004_subscription.py  0005_alter_subscription_course_alter_subscription_user.py  0006_alter_subscription_user.py  0007_alter_subscription_user.py  0008_alter_subscription_user.py  0009_lesson_updated_at.py  0010_remove_lesson_updated_at_lesson_last_update.py  0011_remove_lesson_last_update_course_last_update.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_payments.py  0004_alter_payments_options_alter_user_options.py  0005_alter_user_is_active.py  0006_payments_payment_link_payments_session_id.py  0007_payments_payment_status.py  0008_alter_payments_payment_status.py  0009_alter_user_last_login.py
