[tool.poetry]
name = "drf-hws"
version = "0.1.0"
description = ""
authors = ["Khitrov <Hitrov.95@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
coverage = "^7.5.1"
drf-yasg = "^1.21.7"
stripe = "^9.6.0"
celery = "^5.4.0"
redis = "^5.0.4"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
